# FastCorotatedFEM

./: AVX_math.h  CMakeLists.txt  Common.h  FastCorotFEM.cpp  FastCorotFEM.h  LICENSE  README.md  TetModel.cpp  TetModel.h  main.cpp
cmake/Modules/: resource_wrap_cpp.cmake
utilities/: MiniGL.cpp  MiniGL.h  TetGenLoader.cpp  TetGenLoader.h  Timing.h
